第一次上传，博客html网页

--- a/reg.html
+++ b/reg.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>博客首页</title>
+    <title>用户注册页面</title>
     <style>
         @charset "utf-8";
         body{
@@ -116,46 +116,11 @@
         </ul>
     </div>
 </div>
-<img src="img/博客首页顶端.jpg" width="100%" height="300px">
-<div id="blog">
-    <ul>
-        <li>
-            <div class="blog-left">
-                <p ><a href="detail.html" class="title">测试文章</a></p>
-                <p style="margin-top: 20px">内容1</p>
-                <p style="margin-top: 90px"><img src="img/博客首页头像.png" >测试<img src="img/博客首页时间.png" style="margin-left: 20px">2019/11/6</p>
-            </div>
-            <div class="blog-right"><img src="img/博客首页内容.jpg"></div>
-        </li>
-        <li>
-            <div class="blog-left">
-                <p ><a href="detail.html" class="title">测试文章</a></p>
-                <p style="margin-top: 20px">内容2</p>
-                <p style="margin-top: 90px"><img src="img/博客首页头像.png" >测试<img src="img/博客首页时间.png" style="margin-left: 20px">2016/10/31</p>
-            </div>
-            <div class="blog-right"><img src="img/博客首页内容.jpg"></div>
-        </li>
-        <li>
-            <div class="blog-left">
-                <p ><a href="detail.html" class="title">测试文章</a></p>
-                <p style="margin-top: 20px">内容3</p>
-                <p style="margin-top: 90px"><img src="img/博客首页头像.png" >测试<img src="img/博客首页时间.png" style="margin-left: 20px">2016/10/31</p>
-            </div>
-            <div class="blog-right"><img src="img/博客首页内容.jpg"></div>
-        </li>
-        <li>
-            <div class="blog-left">
-                <p ><a href="detail.html" class="title">测试文章</a></p>
-                <p style="margin-top: 20px">内容4</p>
-                <p style="margin-top: 90px"><img src="img/博客首页头像.png" >测试<img src="img/博客首页时间.png" style="margin-left: 20px">2016/10/31</p>
-            </div>
-            <div class="blog-right"><img src="img/博客首页内容.jpg"></div>
-        </li>
-    </ul>
-
-    <div class="page">
-        <a href="#">首页</a> <a href="#">1</a> <a href="#">2</a> <a href="#">3</a> <a href="#">...</a><a href="#">尾页</a>
-    </div>
+<div id="box">
+    <p class="p_line">注册账号<span style="padding-left: 730px">已有账号直接登陆</span></p>
+    <p style="margin-top: 40px"><input type="text" class="txtBox" placeholder="请输入账号"></p>
+    <p><input type="password" class="txtBox" placeholder="请输入密码"></p>
+    <p><input class="btn" type="submit" value="提交注册"></p>
 </div>
 <div id="bottom">
     <div id="bottom-content">
