--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <p class="t2">在博客中,可以畅所欲言,可以学习IT最新的知识！</p>
     <p><input type="text" class="textbox" placeholder="请输入账号"></p>
     <p><input type="text" class="textbox" placeholder="请输入密码"></p>
-    <p><input type="submit" value="确认登陆"  class="submit"></p>
+    <p><input type="submit" value="确认登陆"  class="submit" onclick="window.location.href='file:///F:/html之博客/index.html'"></p>
     <p class="text"style="text-align: right;">忘记密码</p>
-    <p ><input type="button" value="注册账号" class="button"></p>
+    <p ><input type="button" value="注册账号" class="button" onclick="window.location.href='file:///F:/html之博客/reg.html'></p>
 </div>
 </body>
 </html>
