--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
 <div id="login">
     <p ><img src="img/登录页面.gif" width=50% height=50%></p>
-    <p class="t1">欢迎来到刘小剑的博客!</p>
+    <p class="t1">欢迎来到刘小剑的博客系统!</p>
     <p class="t2">在博客中,可以畅所欲言,可以学习IT最新的知识！</p>
     <p><input type="text" class="textbox" placeholder="请输入账号"></p>
     <p><input type="text" class="textbox" placeholder="请输入密码"></p>
