--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <p><input type="text" class="textbox" placeholder="请输入密码"></p>
     <p><input type="submit" value="确认登陆"  class="submit" onclick="window.location.href='file:///F:/html之博客/HomePage.html'"></p>
     <p class="text"style="text-align: right;">忘记密码</p>
-    <p><input type="button" value="注册账号" class="button" onclick="window.location.href='file:///F:/html之博客/reg.html'></p>
+    <p><input type="button" value="注册账号" class="button" onclick="window.location.href='file:///F:/html之博客/reg.html'"></p>
 </div>
 </body>
 </html>
