--- a/HomePage.html
+++ b/HomePage.html
@@ -121,7 +121,7 @@
     <ul>
         <li>
             <div class="blog-left">
-                <p ><a href="detail.html" class="title">测试文章</a></p>
+                <p ><a href="https://liuzhou1998.github.io/reg.html/content.html" class="title">测试文章</a></p>
                 <p style="margin-top: 20px">内容1</p>
                 <p style="margin-top: 90px"><img src="img/博客首页头像.png" >测试<img src="img/博客首页时间.png" style="margin-left: 20px">2019/11/6</p>
             </div>
