--- a/HomePage.html
+++ b/HomePage.html
@@ -129,7 +129,7 @@
         </li>
         <li>
             <div class="blog-left">
-                <p ><a href="detail.html" class="title">测试文章</a></p>
+                <p ><a href="https://liuzhou1998.github.io/content.html" class="title">测试文章</a></p>
                 <p style="margin-top: 20px">内容2</p>
                 <p style="margin-top: 90px"><img src="img/博客首页头像.png" >测试<img src="img/博客首页时间.png" style="margin-left: 20px">2016/10/31</p>
             </div>
@@ -137,7 +137,7 @@
         </li>
         <li>
             <div class="blog-left">
-                <p ><a href="detail.html" class="title">测试文章</a></p>
+                <p ><a href="https://liuzhou1998.github.io/content.html" class="title">测试文章</a></p>
                 <p style="margin-top: 20px">内容3</p>
                 <p style="margin-top: 90px"><img src="img/博客首页头像.png" >测试<img src="img/博客首页时间.png" style="margin-left: 20px">2016/10/31</p>
             </div>
@@ -145,7 +145,7 @@
         </li>
         <li>
             <div class="blog-left">
-                <p ><a href="detail.html" class="title">测试文章</a></p>
+                <p ><a href="https://liuzhou1998.github.io/content.html" class="title">测试文章</a></p>
                 <p style="margin-top: 20px">内容4</p>
                 <p style="margin-top: 90px"><img src="img/博客首页头像.png" >测试<img src="img/博客首页时间.png" style="margin-left: 20px">2016/10/31</p>
             </div>
